--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
         google()
     }
     dependencies {
@@ -10,22 +11,20 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4'
+        // }
     }
 }
 
-allprojects {
-    repositories {
-        jcenter()
-        google()
+    allprojects {
+        repositories {
+            jcenter()
+            mavenCentral()
+            google()
+        }
+        tasks.withType(Javadoc).all { enabled = false }
     }
-    tasks.withType(Javadoc).all { enabled = false }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
 
 
+    task clean(type: Delete) {
+        delete rootProject.buildDir
+    }
